# Programmin-C

./: .gitmodules  Laba9  Laba9.c  Laba9_1  Laba9_1.c  example.txt  file.txt  lab7.md  mergesort.py  sort.c  text.docx  z1.c
Laba1/: hello  task1.c  task2.c
Laba10/: Makefile  main_function.c  time_structure.c  time_structure.h
Laba11/: z2.c  z3.c  z4.c
Laba12/cmake/bn/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  list-c
Laba12/task0/: Makefile
Laba12/task1/: CMakeLists.txt
Laba12/task1/background/: CMakeLists.txt
Laba12/task1/pipes/: CMakeLists.txt
Laba5/: Task1  Task1.c  Task2  Task2.c
Laba6/: task1  task1.c  task2  task2.c
Laba7/: Lab7.c
Laba8/: Laba8.c  laba8
Sem_2_Laba 1/: task2  task2.c  test  test.c
Sem_2_Laba 2/: task1  task1.c  test  test.c
Sem_2_Laba 4/: joke.txt  task  task.c  test  test.c
Sem_2_Laba 5/: task  task.c
Sem_2_Laba 7/: task1  task1.c  task2  task2.c  task3  task3.c
Sem_2_Laba 8/: calculator.c  calculator.h  test  test_calculator.c  test_program  you.txt
Sem_2_RGR/palindrom/: CMakeLists.txt
Sem_2_RGR/palindrom/src/: main.c  manacher.c  manacher.h  preprocess.c  preprocess.h  utils.c  utils.h
Sem_2_RGR/palindrom/tests/: CMakeLists.txt  test_check.c
laba3/: hello  hello.c  task11
laba4/: task  task1.c  task2.c  task6
